fix(contactUs): footer & contactUs no longer extends over other elements when window is too small

--- a/src/UI/UIComponents/FOOTER/PText/pText.module.scss
+++ b/src/UI/UIComponents/FOOTER/PText/pText.module.scss
@@ -1,4 +1,8 @@
 // PText
 .pText {
   padding: var(--spacing-1);
+  width: inherit;
+
+  word-wrap: wrap;
+  overflow-wrap: break-word;
 }
