--- a/src/UI/UIComponents/FOOTER/aLink/aLink.module.scss
+++ b/src/UI/UIComponents/FOOTER/aLink/aLink.module.scss
@@ -3,12 +3,12 @@
   background-color: inherit;
   width: 100%;
   cursor: pointer;
+
   text-align: start;
+
   border: none;
 
   display: flex;
   justify-content: flex-start;
   align-items: center;
-
-  height: var(--spacing-4);
 }
