--- a/src/UI/UIComponents/PAGES/contactUs/components/contactInfo/components/info/info.module.scss
+++ b/src/UI/UIComponents/PAGES/contactUs/components/contactInfo/components/info/info.module.scss
@@ -31,4 +31,8 @@
       font-variation-settings: "wght" 300;
     }
   }
+
+  @media screen and (max-width: 375px) {
+    padding: 0px;
+  }
 }
